fixed btn pressed color in dark mode

--- a/v1/css/layout-1.css
+++ b/v1/css/layout-1.css
@@ -72,7 +72,7 @@ remote.layout-1 {
 		filter: var(--btn-drop-shadow);
 	}
 	div.btn.pressed {
-		background: #acacac;
+		background: var(--btn-pressed-background-color);
 	}
 	
 	[data-key="A"] {
