--- a/v1/css/layout-3.css
+++ b/v1/css/layout-3.css
@@ -123,7 +123,7 @@ remote.layout-3 {
 		filter: var(--btn-drop-shadow);
 	}
 	div.btn.pressed {
-		background: #acacac;
+		background: var(--btn-pressed-background-color);
 	}
 	
 	.numBtns {
